# omni-agents-request

./: .gitignore  LICENSE  README.md  SKILL.md  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: COMBINER.py  __init__.py  chatgpt_web.py  glm_web.py
tests/: test_oar.py
